[Misc] Improved tests